--- a/HeywoodInBloom/appsettings.json
+++ b/HeywoodInBloom/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=BAVELLANETII\\SQLEXPRESS;Initial Catalog=HeywoodInBloom;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
